# fast-shield

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: building.md  cli_reference.md  concurrency_model.md  performance_report.md  security_notes.md  technical_spec.md
include/core/: ChaCha20.hpp  ChaCha20Poly1305.hpp  CryptoEngine.hpp  FastShield.hpp  FileFormat.hpp  HmacSha256.hpp  Pbkdf2.hpp  Poly1305.hpp  Sha256.hpp
include/io/: FileHandler.hpp  LinuxFileHandler.hpp  Win32FileHandler.hpp
include/utils/: BlockingQueue.hpp  BufferPool.hpp  Logger.hpp  Random.hpp  SecureZero.hpp  SizeParser.hpp
src/: main.cpp
src/core/: ChaCha20.cpp  ChaCha20Poly1305.cpp  CryptoEngine.cpp  FastShield.cpp  HmacSha256.cpp  Pbkdf2.cpp  Poly1305.cpp  Sha256.cpp
src/io/: FileHandler.cpp  LinuxFileHandler.cpp  Win32FileHandler.cpp
src/utils/: BufferPool.cpp  Random.cpp  SecureZero.cpp
tests/: test_roundtrip.cpp
